# contract-review-system

./: .gitignore  AGENTS.md  README.md  package-lock.json  pids  start.sh
backend/: .env.example  .gitignore  app.py  db.py  init_db.sql  pyproject.toml  requirements.txt  resolve.py
backend/routes/: __init__.py  audit_point.py  contract_type.py  dimension.py  internal.py
backend/src/: __init__.py  config.py  exception_handlers.py  lifecycle.py  main.py  middleware.py  schemas.py
backend/src/api/: adapters.py  audit_points.py  auth.py  contract_types.py  contracts.py  dimensions.py  documents.py  files.py  health.py  internal.py  points.py  responses.py  review.py
backend/src/db/migrations/: 001_create_auth_tables.sql  002_create_config_tables.sql  003_create_audit_tables.sql  004_seed_default_data.sql  (+5 more)
backend/src/pipelines/: document_tasks.py  document_upload.py
backend/src/services/: audit_point_store.py  audit_result_store.py  auth_service.py  block_builder.py  contract_extractor.py  contract_store.py  contract_structure_parser.py  contract_type_store.py  db_base.py  dimension_store.py  document_parser.py  file_storage.py  llm_classifier.py  pdf_contract_parser.py  python_docx_contract_parser.py  structure_editor.py
backend/tests/: conftest.py  fakes.py  test_block_builder.py  test_config_api.py  test_contract_extractor.py  test_contracts_api.py  test_document_parser.py  test_documents_api.py  test_homepage.py  test_llm_classifier.py  test_mysql_contract_store.py  test_pdf_contract_parser.py  test_python_docx_contract_parser.py  test_upload_api.py
(+109 files in other folders)
