[project]
name = "contract-upload-homepage"
version = "0.1.0"
description = "AI智契合同上传首页与 FastAPI 文件接收后端 Demo"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==24.1.0",
    "anyio>=4.4.0,<4.10.0",
    "bcrypt>=4.0.0",
    "docling",
    "fastapi>=0.115.0,<0.116.0",
    "httpx>=0.27.0,<0.28.0",
    "jinja2>=3.1.4",
    "pydantic-settings>=2.4.0",
    "pymupdf4llm>=1.27.2.3",
    "pymysql>=1.1.0",
    "pyjwt>=2.8.0",
    "python-docx==1.2.0",
    "python-multipart==0.0.9",
    "socksio>=1.0.0",
    "torch",
    "uvicorn[standard]>=0.30.0,<0.31.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[dependency-groups]
dev = [
    "pytest>=8.2.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
